added pine tree

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title></title>
 </head>
 <body>
-
+    <h4>Pine Tree!</h4>
+        <img src='https://s-media-cache-ak0.pinimg.com/736x/1d/eb/02/1deb024cd57d262eafce40b8712c9e4b.jpg'>
 </body>
 </html>
