--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-    <h4>Redwood Tree!</h4>
-        <img src='http://i.livescience.com/images/i/000/045/563/i02/16-sequoia.jpg?1344420221'>
+    <h4>Baobab Tree!</h4>
+        <img src='http://www.accessgambia.com/information/large/baobab-2.jpg'>
 </body>
 </html>
