--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title></title>
 </head>
 <body>
+	<h4>Pine Tree!</h4>
+        <img src='https://s-media-cache-ak0.pinimg.com/736x/1d/eb/02/1deb024cd57d262eafce40b8712c9e4b.jpg'>
+	<h4>Redwood Tree!</h4>
+        <img src='http://i.livescience.com/images/i/000/045/563/i02/16-sequoia.jpg?1344420221'>
     <h4>Baobab Tree!</h4>
         <img src='http://www.accessgambia.com/information/large/baobab-2.jpg'>
 </body>
