--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-My Page
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="trees.css">
+	<title></title>
+</head>
+<body>
+	<h4>Pine Tree!</h4>
+	    <div>
+        <img src='https://s-media-cache-ak0.pinimg.com/736x/1d/eb/02/1deb024cd57d262eafce40b8712c9e4b.jpg'>
+        </div>
+	<h4>Redwood Tree!</h4>
+	    <div>
+        <img src='http://i.livescience.com/images/i/000/045/563/i02/16-sequoia.jpg?1344420221'>
+        </div>
+    <h4>Baobab Tree!</h4>
+        <div>
+        <img src='http://www.accessgambia.com/information/large/baobab-2.jpg'>
+        </div>
+</body>
+</html>
